--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,5 @@
-header {
-    text-align: center;
-    font-weight: 800;
-    font-family:'Times New Roman', Times, serif;
-    font-size: 30px;
-}
 
-ul, ol {
+.items {
     display: table;
     margin: 0 auto;
     text-align: left;
@@ -36,8 +30,9 @@ a:active {
 }
 
 body {
+        height: 200vh;
         background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
-        height: 100%;
+        margin: 0;
 }
 
 .image {
@@ -48,4 +43,70 @@ body {
 
 h2, p {
     text-align: center;
+}
+
+header {
+    text-align: center;
+    font-weight: 800;
+    font-family:'Times New Roman', Times, serif;
+    font-size: 30px;
+}
+
+.navbar > li, a, button {
+    font-family:'Times New Roman', Times, serif;
+    font-weight: 500;
+    font-size: 16px;
+    color:black;
+    text-decoration: none;
+}
+
+.navbar > header {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: white;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 30px 10%;
+    height: 20vh;
+}
+
+.logo {
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    border: 0;
+    margin-right: auto;
+}
+
+.nav-links li {
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.nav-links li a {
+    transition: all 0.3s ease 0s;
+}
+
+.nav-links li a:hover {
+    color: gray;
+}
+
+button {
+    padding: 9px 25px;
+    background-color: rgba(0, 136, 169, 1);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+button:hover {
+    background-color: rgba(0, 136, 169, 0.8);
+}
+
+h1 {
+    margin-left: auto;
+    margin-right: auto;
 }
