--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 .items {
     display: table;
     margin: 0 auto;
@@ -68,8 +67,12 @@ header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 30px 10%;
-    height: 20vh;
+    padding: 10px 2%;
+    height: 15vh;
+    border-bottom: 5px solid grey;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    overflow: hidden;
 }
 
 .logo {
@@ -114,4 +117,8 @@ h1 {
 .navbar {
     position: sticky;
     top: 0;
+}
+
+.landing-page {
+    font-family: 'Brush Script MT', cursive;
 }
